<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/rubik"
        android:text="@string/your_food"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantityLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="430dp"
        app:boxStrokeColor="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/food_desc"
        app:hintTextColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/foodquantity"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Input Food Quantity/Serving"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/food_photo"
        android:layout_width="300dp"
        android:layout_height="225dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_name"
        android:contentDescription="@string/food_image" />

    <Button
        android:id="@+id/btnPredicted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/hard_pink"
        android:fontFamily="@font/muli"
        android:text="@string/predicted"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityLayout" />

    <Button
        android:id="@+id/btn_select_take"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/hard_pink"
        android:drawableEnd="@drawable/ic_select"
        android:textColor="@color/white"
        android:fontFamily="@font/muli"
        android:text="@string/reselect_retake_food"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sugar_chart" />

    <Button
        android:id="@+id/btn_back_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:drawableEnd="@drawable/ic_home"
        android:fontFamily="@font/muli"
        android:text="@string/back_home"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        android:backgroundTint="@color/hard_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_take" />

    <TextView
        android:id="@+id/food_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/muli"
        android:text="@string/please_select_predict_button_for_showing_your_sugar_and_calories"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_photo" />
    <TextView
        android:id="@+id/directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/muli"
        android:text="INPUT NUMBER ONLY"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_photo" />
    <TextView
        android:id="@+id/directions_ex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="48dp"
        android:drawableStart="@drawable/ic_info"
        android:fontFamily="@font/muli"
        android:text="Ex. (0.25 = 1/4 serving, 0.50 = 1/2 serving)"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_photo" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/calorie_chart"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="160dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_desc" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/sugar_chart"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="160dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_desc" />


    <ProgressBar
        android:id="@+id/progbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressBackgroundTint="@color/hard_pink"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPredicted"
        app:layout_constraintVertical_bias="0.426" />

</androidx.constraintlayout.widget.ConstraintLayout>